Ajustes al estilo del chat y comportamiento de Charlie Pity

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -123,7 +123,7 @@
 <body>
   <div class="chat-box">
     <div class="charlie-side">
-      <img src="{{ url_for('static', filename='CharliePity2.png') }}" alt="Charlie Pity Windsor">
+      <img src="{{ url_for('static', filename='CharliePity.png') }}" alt="Charlie Pity Windsor">
     </div>
     <div class="form-side">
       <h1>Charlie Pity Windsor</h1>
